Fix vertical alignment of empty badge elements (#1008)

--- a/src/scss/ui/_badges.scss
+++ b/src/scss/ui/_badges.scss
@@ -22,6 +22,7 @@
     min-height: auto;
     padding: 0;
     border-radius: $border-radius-pill;
+    vertical-align: baseline;
   }
 
   .avatar {
